# mujoco-ros2-control

./: .gitignore  README.md  pixi.toml
models/franka_panda/: mjx_panda.xml  mjx_scene.xml  panda.xml  panda_mink.xml
ros2_ws/launch/: teleop_mujoco.launch.py
ros2_ws/src/teleop_pipeline/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/src/teleop_pipeline/launch/: teleop_mujoco.launch.py  teleop_mujoco_ik_only.launch.py
ros2_ws/src/teleop_pipeline/resource/: teleop_pipeline
ros2_ws/src/teleop_pipeline/teleop_pipeline/: impedance_node.py  mink_ik_node.py  mujoco_sim_bridge.py  mujoco_visualizer.py  pose_target_pub.py  torque_router.py
tests/: monitor_pipeline.py  test_ik_standalone.py
