<package format="3">
  <name>teleop_pipeline</name>
  <version>0.0.1</version>
  <description>Teleop → MINK IK → Impedance → MuJoCo torque pipeline</description>
  <maintainer email="ahmad.gazar@neura-robotics.com"></maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
